--- a/src/resources/views/news.hbs
+++ b/src/resources/views/news.hbs
@@ -1,1 +1,16 @@
-<h1>News Page</h1>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=yes"
+    />
+    <title>Document</title>
+    <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
+  </head>
+  <body>
+
+    <h1>News Page</h1>
+  </body>
+</html>
