--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -1,1 +1,9 @@
 @import "variables";
+.user-avatar {
+  width: 50px;
+  height: 50px;
+  border-radius: 50px;
+  margin-right: 10px;
+}
+
+// @import "login";
