--- a/src/resources/views/search.hbs
+++ b/src/resources/views/search.hbs
@@ -1,15 +1,38 @@
-<div class="mt-4">
-  <form method="get" action="/news">
-    <div class="form-group">
-      <label for="exampleInputText">Nhập từ khóa</label>
-      <input
-        type="text"
-        name="q"
-        class="form-control"
-        id="exampleInputText"
-        placeholder="Enter Search..."
-      />
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=yes"
+    />
+    <title>Document</title>
+    <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
+  </head>
+  <body>
+    <div class="mt-4">
+      <form method="" action="">
+        <div class="form-group">
+          <label for="exampleInputText">Nhập từ khóa</label>
+          <input
+            type="text"
+            name="q"
+            class="form-control"
+            id="exampleInputText"
+            placeholder="Enter Search..."
+          />
+        </div>
+        <div class="form-group">
+          <label for="">Chon gioi tinh</label>
+          <select name="gender" class="form-control" id="">
+            <option value="">Chon gio tinh</option>
+            <option value="male">nam</option>
+            <option value="female">nu</option>
+          </select>
+        </div>
+        <button type="submit" class="btn btn-primary">Tìm Kiếm</button>
+      </form>
     </div>
-    <button type="submit" class="btn btn-primary">Tìm Kiếm</button>
-  </form>
-</div>
+
+  </body>
+</html>
