--- a/src/resources/views/me/stored-courses.hbs
+++ b/src/resources/views/me/stored-courses.hbs
@@ -41,9 +41,15 @@
       <tr>
         <th scope="col">#</th>
         <th scope="col">Sl</th>
-        <th scope="col">Tên Khóa Học </th>
-        <th scope="col">Trình Độ</th>
-        <th scope="col" colspan="2">Thời Gian Tạo</th>
+        <th scope="col">Tên Khóa Học
+          <a href="?_sort&column=name&type=desc"><i
+              class="fa-solid fa-sort"
+            ></i></a></th>
+        <th scope="col">Trình Độ
+        </th>
+        <th scope="col" colspan="2">Thời Gian Tạo
+
+        </th>
       </tr>
     </thead>
     <tbody>
