--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -45,7 +45,7 @@
             <a class="dropdown-item" href="/me/stored/courses">Khóa Học Của Tôi</a>
             <a class="dropdown-item" href="/me/stored/news">Bài Viết Của Tôi</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Đăng Xuất</a>
+            <a class="dropdown-item logoutBtn" href="#">Đăng Xuất</a>
             <a class="dropdown-item" href="/auth/viewLogin">Đăng Nhập</a>
 
           </div>
@@ -67,8 +67,14 @@
   </div>
 </nav>
 
-<script>
+<script type="text/javascript">
   const user = JSON.parse(localStorage.getItem("user")); console.log(user);
-  const namelogin = document.querySelector(".nameLogin"); if(user?.userName) {
-  namelogin.textContent = user.userName }
+  const nameLogin = document.querySelector(".nameLogin"); const userAvatar =
+  document.querySelector(".user-avatar"); if(user?.userName && user?.avatar) {
+  const srcAvatarUser = user.avatar; nameLogin.textContent = user.userName ;
+  userAvatar.src = srcAvatarUser} const logoutBtn =
+  document.querySelector(".logoutBtn"); logoutBtn &&
+  logoutBtn.addEventListener("click", (e) => { e.preventDefault();
+  localStorage.clear(); alert("Dang xuat khoi the gioi thanh cong");
+  location.href = "/" })
 </script>
