--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -2,4 +2,14 @@
   width: 50px;
   height: 50px;
   border-radius: 50px;
-  margin-right: 10px; }
+  margin-right: 10px;
+}
+
+.text-truncate {
+  display: block;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  max-height: 2.4em;
+  line-height: 1.2em;
+}
