--- a/src/resources/views/admin/me/trash-products.hbs
+++ b/src/resources/views/admin/me/trash-products.hbs
@@ -1,26 +1,26 @@
-<div class="mt-4">
+<div class="container mt-4">
   <div>
     <h3>Thùng rác của tôi</h3>
-    <a href="/me/stored/courses">Danh sách khóa học của tôi</a>
+    <a href="/admin/me/stored/products">Danh sách sản phẩm của tôi</a>
   </div>
 
   <table class="table mt-4">
     <thead>
       <tr>
         <th scope="col">#</th>
-        <th scope="col">Tên Khóa Học </th>
-        <th scope="col">Trình Độ</th>
+        <th scope="col">Tên sản phẩm </th>
+        <th scope="col">Giá</th>
         <th scope="col">Thời Gian Tạo</th>
         <th scope="col" colspan="2">Thời Gian Xóa</th>
       </tr>
     </thead>
     <tbody>
-      {{#each courses}}
+      {{#each products}}
         <tr>
           <th scope="row">{{sum @index 1}}</th>
 
           <td>{{this.name}}</td>
-          <td>{{this.level}}</td>
+          <td>{{this.price}}</td>
           <td>{{this.createdAt}}</td>
           <td>{{this.deletedAt}}</td>
           <td>
@@ -34,14 +34,14 @@
               data-id="{{this._id}}"
               class="btn btn-link"
               data-toggle="modal"
-              data-target="#delete-course-modal"
+              data-target="#delete-product-modal"
             >Xóa vĩnh viễn</a>
           </td>
         </tr>
       {{else}}
         <tr>
           <td colspan="5" class="text-center">Thùng rác trống.
-            <a href="/me/stored/courses">Danh sách khóa học</a>
+            <a href="/admin/me/stored/products">Danh sách sản phẩm</a>
           </td>
         </tr>
       {{/each}}
@@ -49,11 +49,11 @@
   </table>
 </div>
 
-{{! Confirm delete course }}
+{{! Confirm delete product }}
 <!-- Modal -->
 <div
   class="modal fade"
-  id="delete-course-modal"
+  id="delete-product-modal"
   tabindex="-1"
   role="dialog"
   aria-labelledby="exampleModalLabel"
@@ -73,10 +73,10 @@
         </button>
       </div>
       <div class="modal-body">
-        Hành động này không thể khôi phục . Bạn vẫn muốn xóa khóa học này?
+        Hành động này không thể khôi phục . Bạn vẫn muốn xóa sản phẩm này?
       </div>
       <div class="modal-footer">
-        <button id="btn-delete-course" type="button" class="btn btn-danger">Xóa
+        <button id="btn-delete-product" type="button" class="btn btn-danger">Xóa
           vĩnh viễn</button>
         <button
           type="button"
@@ -89,18 +89,18 @@
 </div>
 
 {{! Delete hidden form  }}
-<form class="mt-4" name="delete-course-form" method="post"></form>
-<form class="mt-4" name="restore-course-form" method="post"></form>
+<form class="mt-4" name="delete-product-form" method="post"></form>
+<form class="mt-4" name="restore-product-form" method="post"></form>
 <script type="module">
-  document.addEventListener('DOMContentLoaded', function(){ var courseId; var
-  deleteForm = document.forms['delete-course-form']; var btnDeleteCourse =
-  document.getElementById('btn-delete-course'); var restoreForm =
-  document.forms['restore-course-form']; var restoreBtn = $('.btn-restore');
-  $('#delete-course-modal').on('show.bs.modal', function(event) { var button =
-  $(event.relatedTarget); courseId = button.data('id') ; }) ;
-  btnDeleteCourse.onclick = function(){ deleteForm.action = '/courses/'
-  +courseId+ '/force?_method=delete' ; deleteForm.submit(); };
-  restoreBtn.click(function(e){ e.preventDefault(); var courseId =
-  $(this).data('id'); restoreForm.action = '/courses/' +courseId+
+  document.addEventListener('DOMContentLoaded', function(){ var productId; var
+  deleteForm = document.forms['delete-product-form']; var btnDeleteproduct =
+  document.getElementById('btn-delete-product'); var restoreForm =
+  document.forms['restore-product-form']; var restoreBtn = $('.btn-restore');
+  $('#delete-product-modal').on('show.bs.modal', function(event) { var button =
+  $(event.relatedTarget); productId = button.data('id') ; }) ;
+  btnDeleteproduct.onclick = function(){ deleteForm.action = '/admin/products/'
+  +productId+ '/force?_method=delete' ; deleteForm.submit(); };
+  restoreBtn.click(function(e){ e.preventDefault(); var productId =
+  $(this).data('id'); restoreForm.action = '/admin/products/' +productId+
   '/restore?_method=PATCH' ; restoreForm.submit() }) })
 </script>
