--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -3,7 +3,7 @@
 
     <a class="navbar-brand" href="/">
 
-      F8 Blog</a>
+      Book Shop</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -40,29 +40,33 @@
             <span class="namelogin">Quandev99</span>
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="/courses/create">Đăng Khóa Học</a>
+            <a class="dropdown-item" href="/admin/products/create">Đăng sản phẩm</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="/me/stored/courses">Khóa Học Của Tôi</a>
+            <a class="dropdown-item" href="#">Thêm danh mục sách</a>
+            <a class="dropdown-item" href="/admin/me/stored/products">Sản phẩm
+              Của Tôi</a>
+            <a class="dropdown-item" href="/admin/me/listUser">Danh sách tài
+              khoản Của Tôi</a>
             <a class="dropdown-item" href="/me/stored/news">Bài Viết Của Tôi</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item logoutBtn" href="#">Đăng Xuất</a>
-            <a class="dropdown-item" href="/auth/viewLogin">Đăng Nhập</a>
+            <a class="dropdown-item" href="/admin/auth/viewLogin">Đăng Nhập</a>
 
           </div>
         </li>
       </ul>
-      {{! <form class="form-inline my-2 my-lg-0">
-      <input
-        class="form-control mr-sm-2"
-        type="search"
-        placeholder="Search"
-        aria-label="Search"
-      />
-      <button
-        class="btn btn-outline-success my-2 my-sm-0"
-        type="submit"
-      >Search</button>
-    </form> }}
+      <form class="form-inline my-2 my-lg-0">
+        <input
+          class="form-control mr-sm-2"
+          type="search"
+          placeholder="Search"
+          aria-label="Search"
+        />
+        <button
+          class="btn btn-outline-success my-2 my-sm-0"
+          type="submit"
+        >Search</button>
+      </form>
     </div>
   </div>
 </nav>
