--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -42,7 +42,10 @@
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="/admin/products/create">Đăng sản phẩm</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Thêm danh mục sách</a>
+            <a class="dropdown-item" href="/admin/categories/create">Thêm danh
+              mục sách</a>
+            <a class="dropdown-item" href="/admin/me/stored/categories">Danh mục
+              sách</a>
             <a class="dropdown-item" href="/admin/me/stored/products">Sản phẩm
               Của Tôi</a>
             <a class="dropdown-item" href="/admin/me/listUser">Danh sách tài
