--- a/src/resources/views/index.hbs
+++ b/src/resources/views/index.hbs
@@ -1,13 +1,15 @@
 <div class="container">
   <div class="mt-4">
-    <div class="row">
+    <div class="row mb-5">
       {{#each products}}
-        <div class="col-lg-4 mb-3 text-center">
+        <div
+          class="col-lg-3 mb-3 pagination pagination-circle justify-content-center"
+        >
           <div class="card">
             <div class="card-image">
               <a
                 href="admin/products/{{this.slug}}"
-                {{! class="d-block rounded-lg lift lift-lg" }}
+                class="d-block rounded-lg lift lift-lg"
               >
                 <img
                   class="card-img-top img-fluid rounded-lg"
@@ -16,11 +18,12 @@
                 />
               </a>
             </div>
-            <div class="card-body">
+            <div class="card-body card lift h-100">
               <a href="admin/products/{{this.slug}}">
                 <h5 class="card-title">{{this.name}}</h5>
               </a>
               <p class="card-text text-truncate">{{this.description}}</p>
+              <p class="card-text text-truncate">{{this.price}}</p>
               <a href="#" class="btn btn-primary">Mua sản phẩm</a>
             </div>
           </div>
