--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -2,8 +2,7 @@
   width: 50px;
   height: 50px;
   border-radius: 50px;
-  margin-right: 10px;
-}
+  margin-right: 10px; }
 
 .text-truncate {
   display: block;
@@ -11,5 +10,7 @@
   white-space: nowrap;
   text-overflow: ellipsis;
   max-height: 2.4em;
-  line-height: 1.2em;
-}
+  line-height: 1.2em; }
+
+ul {
+  list-style: none; }
