--- a/src/resources/views/admin/products/create.hbs
+++ b/src/resources/views/admin/products/create.hbs
@@ -1,48 +1,67 @@
 <div class="mt-4 container">
-  <h3>Đăng sản phẩm</h3>
-  <form method="post" action="/admin/products/store">
-    <div class="form-group">
-      <label for="name">Tên sản phẩm</label>
-      <input
-        type="text"
-        class="form-control"
-        id="name"
-        name="name"
-        placeholder="Enter name"
-      />
-    </div>
-    <div class="form-group">
-      <label for="image">Hình ảnh sản phẩm</label>
-      <input
-        type="text"
-        class="form-control"
-        id="image"
-        name="image"
-        placeholder="Enter image"
-      />
-    </div>
-    <div class="form-group">
-      <label for="description">Mô tả sản phẩm</label>
-      <input
-        type="text"
-        class="form-control"
-        id="description"
-        name="description"
-        placeholder="Enter description"
-      />
-    </div>
-    <div class="form-group">
-      <label for="price">Giá</label>
-      <input
-        type="text"
-        class="form-control"
-        id="price"
-        name="price"
-        placeholder="Enter price"
-      />
-    </div>
-
-    <button type="submit" class="btn btn-primary">Thêm sản phẩm</button>
-    <button type="reset" class="btn btn-primary">Reset sản phẩm</button>
-  </form>
+  <h3 class="text-center">Đăng sản phẩm</h3>
+  <div class="col-lg-12 mt-3">
+    <form action="/admin/products/store" method="post" role="form">
+      <div class="row">
+        <div class="col-md-6 form-group">
+          <label for="name">Tên sản phẩm</label>
+          <input
+            type="text"
+            name="name"
+            class="form-control"
+            id="name"
+            placeholder="Your Name"
+            required=""
+          />
+        </div>
+        <div class="col-md-6 form-group mt-3 mt-md-0">
+          <label for="image">Hình ảnh sản phẩm</label>
+          <input
+            type="text"
+            class="form-control"
+            id="image"
+            name="image"
+            placeholder="Enter image"
+          />
+        </div>
+      </div>
+      <select
+        class="form-control form-control-sm col-lg-3 checkbox-select-option"
+        name="category"
+        required
+      >
+        <option class="text-center" value="">-- Lựa chọn danh mục --</option>
+        {{#each categories}}
+          <option value="{{this.slug}}">{{this.slug}}</option>
+        {{/each}}
+      </select>
+      <div class="form-group mt-3">
+        <label for="price">Giá</label>
+        <input
+          type="text"
+          class="form-control"
+          id="price"
+          name="price"
+          placeholder="Enter price"
+        />
+      </div>
+      <div class="form-group mt-3">
+        <label>Mô tả sản phẩm</label>
+        <textarea
+          class="form-control"
+          name="description"
+          id="description"
+          rows="5"
+          placeholder="description"
+          required=""
+        ></textarea>
+      </div>
+      <div class="my-3">
+        <div class="loading">Loading</div>
+        <div class="error-message"></div>
+      </div>
+      <button type="submit" class="btn btn-primary">Thêm sản phẩm</button>
+      <button type="reset" class="btn btn-primary">Reset sản phẩm</button>
+    </form>
+  </div>
 </div>
