--- a/src/resources/views/partials/footer.hbs
+++ b/src/resources/views/partials/footer.hbs
@@ -1,1 +1,113 @@
-<h2>Footer</h2>
+<footer id="footer " class="bg-dark pt-5">
+  <style>
+    div.text-white>h3,h4{ margin-bottom: 30px; } ul.text-white{ list-style:
+    none;margin-left: -40px; }ul.text-white>li>a{
+      text-decoration: none;
+      color: #ffffff;
+    }ul.text-white>li>a:hover{
+color: #ffc451;
+    } ul.text-white>li>i{ margin-right: 8px; } .social-links{
+      
+      display: flex;align-items: center;
+    } .social-links>a{
+      padding: 10px ;border-radius: 8px;background-color: #292929;
+      margin-left: 5px;
+      text-align: center;
+      display: block;
+      color: white
+    }
+     .social-links>a:hover{
+      background-color: #ffc451;
+      color: #151515
+    }
+  
+
+  </style>
+  <div class="footer-top">
+    <div class="container">
+      <div class="row">
+
+        <div class="col-lg-3 col-md-6">
+          <div class="footer-info text-white">
+            <h3>Gp<span>.</span></h3>
+            <p>
+              131 Nguyễn Xí, Hòa Minh
+              <br />
+              Liên Chiểu, Đà Nẵng<br /><br />
+              <strong>Phone:</strong>
+              0932 307 248<br />
+              <strong>Email:</strong>
+              quannvpd06465@fpt.edu.vn<br />
+            </p>
+            <div class="social-links mt-3">
+              <a href="#" class="twitter"><i
+                  class="fa-brands fa-twitter"
+                ></i></a>
+              <a href="#" class="facebook"><i
+                  class="fa-brands fa-facebook-f"
+                ></i></a>
+              <a href="#" class="instagram"><i class="fa-brands fa-instagram"></i></i></a>
+              <a href="#" class="telegram"><i class="fa-brands fa-telegram"></i></a>
+              <a href="#" class="linkedin"><i class="fa-brands fa-linkedin-in"></i></i></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-2 col-md-6 text-white">
+          <h4>Liên hệ</h4>
+          <ul class="text-white">
+            <li><i class="fa-solid fa-chevron-right text-warning"></i>
+              <a href="#">Home</a></li>
+            <li><i class="fa-solid fa-chevron-right text-warning"></i>
+              <a href="#">About us</a></li>
+            <li><i class="fa-solid fa-chevron-right text-warning"></i>
+              <a href="#">Services</a></li>
+            <li><i class="fa-solid fa-chevron-right text-warning"></i>
+              <a href="#">Terms of service</a></li>
+            <li><i class="fa-solid fa-chevron-right text-warning"></i>
+              <a href="#">Privacy policy</a></li>
+          </ul>
+        </div>
+
+        <div class="col-lg-3 col-md-6 footer-links text-white">
+          <h4>Our Services</h4>
+          <ul class="text-white">
+            <li><i class="fa-solid fa-chevron-right text-warning"></i>
+              <a href="#">Web Design</a></li>
+            <li><i class="fa-solid fa-chevron-right text-warning"></i>
+              <a href="#">Web Development</a></li>
+            <li><i class="fa-solid fa-chevron-right text-warning"></i>
+              <a href="#">Product Management</a></li>
+            <li><i class="fa-solid fa-chevron-right text-warning"></i>
+              <a href="#">Marketing</a></li>
+            <li><i class="fa-solid fa-chevron-right text-warning"></i>
+              <a href="#">Graphic Design</a></li>
+          </ul>
+        </div>
+
+        <div class="col-lg-4 col-md-6 footer-newsletter text-white">
+          <h4>Our Newsletter</h4>
+          <p>Tamen quem nulla quae legam multos aute sint culpa legam noster
+            magna</p>
+          <form action="" method="post">
+            <input type="email" name="email" /><input
+              type="submit"
+              value="Subscribe"
+            />
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="copyright text-white text-center">
+      © Copyright
+      <strong><span>Gp</span></strong>. All Rights Reserved
+    </div>
+    <div class="credits text-white text-center">
+      Designed by
+      <a href="https://bootstrapmade.com/">Quannvpd06465</a>
+    </div>
+  </div>
+</footer>
